fixed text alignment issues

--- a/styles/about.css
+++ b/styles/about.css
@@ -27,8 +27,11 @@ body{
     font-size: 1.5rem;
     padding: 0 15px 0 15px;
     justify-content: center;
-    align-items: flex-start;
     box-sizing: border-box;
+}
+
+.textContainer p{
+    align-self: flex-start;
 }
 
 @media screen and (max-width: 900px) {
